dev:add: beta notice on advisernet search results page

--- a/libs/jade/dev/search/results-advisernet-typo.jade
+++ b/libs/jade/dev/search/results-advisernet-typo.jade
@@ -52,6 +52,9 @@ block content
 			//-h1.page-title.search Search
 			//-.search-title Showing results for #[strong benefits]
 			//- .term-suggestion Search instead for #[a bnefits]
+			p
+				span(class="badge changing") BETA
+				|&nbsp; This is the new search page design - you're seeing it because you're logged in as CABetaAdviser.
 			form
 				.search-results__input(role="search")
 					fieldset
