--- a/libs/styles/components/_buttons.scss
+++ b/libs/styles/components/_buttons.scss
@@ -1,36 +1,36 @@
 // Basic button styling
 // To style a link to look like a button use .button
 
-/*
+
 .btn {
     cursor: pointer;
-    padding: @box-spacing-vertical @box-spacing-horizontal;
-    margin: @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 0;
+    padding: $box-spacing-vertical $box-spacing-horizontal;
+    margin: $box-spacing-horizontal*.5 $box-spacing-horizontal*.5 $box-spacing-horizontal*.5 0;
     &:hover,
     &:focus,
     &:active {
         outline: 0;
     }
     &:focus {
-        -webkit-box-shadow: 0px 0px 0px 2px @heritage-yellow;
-        -moz-box-shadow: 0px 0px 0px 2px @heritage-yellow;
-        box-shadow: 0px 0px 0px 2px @heritage-yellow;
+        -webkit-box-shadow: 0px 0px 0px 2px $heritage-yellow;
+        -moz-box-shadow: 0px 0px 0px 2px $heritage-yellow;
+        box-shadow: 0px 0px 0px 2px $heritage-yellow;
     }
 }
-*/
+
 
 button,
 input[type=submit],
 input[type=reset],
 input[type=button] {
-    @include btn();
+    @extend .btn;
 }
 
 .btn,
 .btn-primary,
 .button,
 .button--blue {
-    @include btn();
+    @extend .btn;
 
     &.btn-small {
         &:focus { background-color: $white; }
