changing classnames and fixing sass

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -11,7 +11,7 @@ block content
 	// NEW INDEX
 	.articleContent
 		.flex-row
-			.span6-sm
+			.col-md-4.col-sm-6
 
 				h2(style="margin-top: 0;") Getting started
 				ul
@@ -19,7 +19,7 @@ block content
 						a.a-external(href="http://alphablog.citizensadvice.org.uk/2016/02/principles-for-digital/") Digital principles
 					li
 						a(href="accessibility.html") Accessibility
-			.span6-sm
+			.col-md-4.col-sm-6
 				h2(style="margin-top: 0;") Resources
 				ul
 					li
