--- a/libs/jade/styles/colours.jade
+++ b/libs/jade/styles/colours.jade
@@ -27,258 +27,258 @@ block content
 	.articleContent
 		div
 			.newrow
-				.span12
+				.col-sm-12.clear
 					h3 Colour contrast
 					p The colour contrast ratio for text and interactive elements (for example #[a(href="../forms/buttons.html") buttons]) should be #[a(href="http://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html") as recommended by the W3C].
 					h3 Brand
 					p The colours are defined in the #[a(href="https://drive.google.com/file/d/0B8v_MHuoZPI2NmVBVThBSnFSeTQ/view?usp=sharing") Brand Guidelines]. Use them in these pairs.
 			.newrow
-				.span4-sm.span6.swatch.swatch--brand--heritage-blue
+				.col-sm-4.swatch.swatch--brand--heritage-blue
 					p Heritage Blue
 						br
 						| @heritage-blue
 						br
-				.span4-sm.span6.swatch.swatch--brand--heritage-yellow
+				.col-sm-4.swatch.swatch--brand--heritage-yellow
 					p Heritage Yellow
 						br
 						| @heritage-yellow
 						br
 			.newrow
-				.span4-sm.span6.swatch.swatch--brand--responsible-purple
+				.col-sm-4.swatch.swatch--brand--responsible-purple
 					p Responsible Purple
 						br
 						| @responsible-purple
 						br
-				.span4-sm.span6.swatch.swatch--brand--responsible-aqua
+				.col-sm-4.swatch.swatch--brand--responsible-aqua
 					p Responsible Aqua
 						br
 						| @responsible-aqua
 						br
 			.newrow
-				.span4-sm.span6.swatch.swatch--brand--inventive-teal
+				.col-sm-4.swatch.swatch--brand--inventive-teal
 					p Inventive Teal
 						br
 						| @inventive-teal
 						br
-				.span4-sm.span6.swatch.swatch--brand--inventive-pink
+				.col-sm-4.swatch.swatch--brand--inventive-pink
 					p Inventive Pink
 						br
 						| @inventive-pink
 						br
 			.newrow
-				.span4-sm.span6.swatch.swatch--brand--generous-green
+				.col-sm-4.swatch.swatch--brand--generous-green
 					p Generous Green
 						br
 						| @generous-green
 						br
-				.span4-sm.span6.swatch.swatch--brand--generous-mauve
+				.col-sm-4.swatch.swatch--brand--generous-mauve
 					p Generous Mauve
 						br
 						| @generous-mauve
 						br
 			.newrow
-				.span12
+				.col-sm-12.clear
 					h3 Brand tints
 					p Here are the brand colours in lighter tints.
 			.newrow
-				.span4-sm.span6.swatch.swatch--beta--heritage-blue-lighter
+				.col-sm-4.swatch.swatch--beta--heritage-blue-lighter
 					p Heritage Blue Lighter
 						br
 						| @heritage-blue-lighter
 						br
-				.span4-sm.span6.swatch.swatch--beta--heritage-blue-lightest
+				.col-sm-4.swatch.swatch--beta--heritage-blue-lightest
 					p Heritage Blue Lightest
 						br
 						| @heritage-blue-lightest
 						br
 			.newrow
-				.span4-sm.span6.swatch.swatch--beta--heritage-yellow-lighter
+				.col-sm-4.swatch.swatch--beta--heritage-yellow-lighter
 					p Heritage Yellow Lighter
 						br
 						| @heritage-yellow-lighter
 						br
-				.span4-sm.span6.swatch.swatch--beta--heritage-yellow-darker
+				.col-sm-4.swatch.swatch--beta--heritage-yellow-darker
 					p Heritage Yellow Darker
 						br
 						| @heritage-yellow-darker
 						br
 			.newrow
-				.span12
+				.col-sm-12.clear
 					h3 Extended palette
 					p These colours shouldn't be used as brand or decorative colours. They’re used for things which are more functional - for example in error notices and call outs. This is because of recognised user behaviour - such as seeing red as a warning.
 			.newrow
-				.span4-sm.span6.swatch.swatch--beta--red
+				.col-sm-4.swatch.swatch--beta--red
 					p Red
 						br
 						| @red
 						br
-				.span4-sm.span6.swatch.swatch--beta--pink
+				.col-sm-4.swatch.swatch--beta--pink
 					p Pink
 						br
 						| @pink
 						br
-				.span4-sm.span6.swatch.swatch--beta--orange
+				.col-sm-4.swatch.swatch--beta--orange
 					p Orange
 						br
 						| @orange
 						br
-				.span4-sm.span6.swatch.swatch--beta--yellow
+				.col-sm-4.swatch.swatch--beta--yellow
 					p Yellow
 						br
 						| @yellow
 						br
-				.span4-sm.span6.swatch.swatch--beta--green
+				.col-sm-4.swatch.swatch--beta--green
 					p Green
 						br
 						| @green
 						br
-				.span4-sm.span6.swatch.swatch--beta--blue
+				.col-sm-4.swatch.swatch--beta--blue
 					p Blue
 						br
 						| @blue
 						br
-				.span4-sm.span6.swatch.swatch--beta--aqua
+				.col-sm-4.swatch.swatch--beta--aqua
 					p Aqua
 						br
 						| @aqua
 						br
 			.newrow
-				.span12
+				.col-sm-12.clear
 					h3 Extended palette tints
 					p Here are the tint variations of the extended colour palette.
 			.newrow
-				.span4-sm.span6.swatch.swatch--beta--red-light
+				.col-sm-4.swatch.swatch--beta--red-light
 					p Red Light
 						br
 						| @red-light
 						br
-				.span4-sm.span6.swatch.swatch--beta--red-lighter
+				.col-sm-4.swatch.swatch--beta--red-lighter
 					p Red Lighter
 						br
 						| @red-lighter
 						br
-				.span4-sm.span6.swatch.swatch--beta--orange-light
+				.col-sm-4.swatch.swatch--beta--orange-light
 					p Orange Light
 						br
 						| @orange-light
 						br
-				.span4-sm.span6.swatch.swatch--beta--orange-lighter
+				.col-sm-4.swatch.swatch--beta--orange-lighter
 					p Orange Lighter
 						br
 						| @orange-lighter
 						br
-				.span4-sm.span6.swatch.swatch--beta--green-light
+				.col-sm-4.swatch.swatch--beta--green-light
 					p Green Light
 						br
 						| @green-light
 						br
-				.span4-sm.span6.swatch.swatch--beta--green-lighter
+				.col-sm-4.swatch.swatch--beta--green-lighter
 					p Green Lighter
 						br
 						| @green-lighter
 						br
-				.span4-sm.span6.swatch.swatch--beta--blue-light
+				.col-sm-4.swatch.swatch--beta--blue-light
 					p Blue Light
 						br
 						| @blue-light
 						br
-				.span4-sm.span6.swatch.swatch--beta--blue-lighter
+				.col-sm-4.swatch.swatch--beta--blue-lighter
 					p Blue Lighter
 						br
 						| @blue-lighter
 						br
-				.span4-sm.span6.swatch.swatch--beta--blue-darker
+				.col-sm-4.swatch.swatch--beta--blue-darker
 					p Blue Darker
 						br
 						| @blue-darker
 						br
-				.span4-sm.span6.swatch.swatch--beta--aqua-light
+				.col-sm-4.swatch.swatch--beta--aqua-light
 					p Aqua Light
 						br
 						| @aqua-light
 						br
-				.span4-sm.span6.swatch.swatch--beta--yellow-light
+				.col-sm-4.swatch.swatch--beta--yellow-light
 					p Yellow Light
 						br
 						| @yellow-light
 						br
-				.span4-sm.span6.swatch.swatch--beta--purple-dark
+				.col-sm-4.swatch.swatch--beta--purple-dark
 					p Purple Dark
 						br
 						| @purple-dark
 						br
 			.newrow
-				.span12
+				.col-sm-12.clear
 					h3 Monochrome palette
 					p This palette is mainly for text, but also for neutral colouring.
 			.newrow
-				.span4-sm.span6.swatch.swatch--mono--gray0
+				.col-sm-4.swatch.swatch--mono--gray0
 					p Gray 0
 						br
 						| @gray-0
 						br
-				.span4-sm.span6.swatch.swatch--mono--gray1
+				.col-sm-4.swatch.swatch--mono--gray1
 					p Gray 1
 						br
 						| @gray-1
 						br
-				.span4-sm.span6.swatch.swatch--mono--gray2
+				.col-sm-4.swatch.swatch--mono--gray2
 					p Gray 2
 						br
 						| @gray-2
 						br
-				.span4-sm.span6.swatch.swatch--mono--gray3
+				.col-sm-4.swatch.swatch--mono--gray3
 					p Gray 3
 						br
 						| @gray-3
 						br
-				.span4-sm.span6.swatch.swatch--mono--gray4
+				.col-sm-4.swatch.swatch--mono--gray4
 					p Gray 4
 						br
 						| @gray-4
 						br
-				.span4-sm.span6.swatch.swatch--mono--gray5
+				.col-sm-4.swatch.swatch--mono--gray5
 					p Gray 5
 						br
 						| @gray-5
 						br
-				.span4-sm.span6.swatch.swatch--mono--gray6
+				.col-sm-4.swatch.swatch--mono--gray6
 					p Gray 6
 						br
 						| @gray-6
 						br
-				.span4-sm.span6.swatch.swatch--mono--gray7
+				.col-sm-4.swatch.swatch--mono--gray7
 					p Gray 7
 						br
 						| @gray-7
 						br
-				.span4-sm.span6.swatch.swatch--mono--gray8
+				.col-sm-4.swatch.swatch--mono--gray8
 					p Gray 8
 						br
 						| @gray-8
 						br
 			//.newrow
-				.span12
+				.col-sm-12.clear
 					h3 Adviser colour palette
 					p Range of colours used for adviser only content.
 			//.newrow
-				.span4-sm.span6.swatch.swatch--adviser--inventive-teal-light
+				.col-sm-4.swatch.swatch--adviser--inventive-teal-light
 					p Inventive Teal Light
 						br
 						| @inventive-teal-light
 						br
-				.span4-sm.span6.swatch.swatch--adviser--inventive-teal-lighter
+				.col-sm-4.swatch.swatch--adviser--inventive-teal-lighter
 					p Inventive Teal Lighter
 						br
 						| @inventive-teal-lighter
 						br
 			//.newrow
-				.span4-sm.span6.swatch.swatch--adviser-blue-gray
+				.col-sm-4.swatch.swatch--adviser-blue-gray
 					p Adviser Blue Gray
 						br
 						| @adviser-blue-gray
 						br
-				.span4-sm.span6.swatch.swatch--adviser-stone
+				.col-sm-4.swatch.swatch--adviser-stone
 					p Adviser Stone
 						br
 						| @adviser-stone
