--- a/libs/styles/base/_utility.scss
+++ b/libs/styles/base/_utility.scss
@@ -143,3 +143,8 @@ a.remove {
 .show-mobile {
     @media (min-width: $screen-md-min) { display: none !important; }
 }
+
+.clear {
+  clear:both;
+}
+
