--- a/libs/styles/base/_variables.scss
+++ b/libs/styles/base/_variables.scss
@@ -190,99 +190,99 @@ $form-disabled-text:				$gray-4;
  */
 
 /*
-$i-external-link:       "\f08e";
-$i-action:              "\f016";
-$i-doc-word:            "\f1c2";
-$i-doc-excel:           "\f1c3";
-$i-doc-pdf:             "\f1c1";
-$i-doc-code:            "\f1c9";
-$i-tick:                "\2713";
-$i-up:                  "\2c4";
-$i-down:                "\2c5";
-$i-left:                "\3c";
-$i-right:               "\3e";
-$i-cross:               "\2716";
-$i-exclamation:         "\f06a";
-$i-search:              "\e600";
-$i-plus:                "\f067";
-$i-minus:               "\f068";
-$i-email:				"\f003";
-$i-print:				"\2399";
-$i-restart:				"\f01e";
-$i-save:				"\e610";
-$i-retrieve:			"\e611";
-$i-copy:				"\e614";
-$i-clear:				"\238c";
-$i-help:				"\3f";
-$i-close:				"\2716";
+$i-external-link:       "f08e";
+$i-action:              "f016";
+$i-doc-word:            "f1c2";
+$i-doc-excel:           "f1c3";
+$i-doc-pdf:             "f1c1";
+$i-doc-code:            "f1c9";
+$i-tick:                "2713";
+$i-up:                  "2c4";
+$i-down:                "2c5";
+$i-left:                "3c";
+$i-right:               "3e";
+$i-cross:               "2716";
+$i-exclamation:         "f06a";
+$i-search:              "e600";
+$i-plus:                "f067";
+$i-minus:               "f068";
+$i-email:				"f003";
+$i-print:				"2399";
+$i-restart:				"f01e";
+$i-save:				"e610";
+$i-retrieve:			"e611";
+$i-copy:				"e614";
+$i-clear:				"238c";
+$i-help:				"3f";
+$i-close:				"2716";
 */
 
-$i-key: 					"\e900";
-$i-undo: 					"\238c";
-$i-target: 					"\e605";
-$i-help: 					"\3f";
-$i-search: 					"\e600";
-$i-email: 					"\f003";
-$i-star: 					"\e602";
-$i-star-o: 					"\f006";
-$i-tick: 					"\e601";
-$i-cross: 					"\e603";
-$i-bin: 					"\e607";
-$i-inbox: 					"\e618";
-$i-redo: 					"\f01e";
-$i-left: 					"\e604";
-$i-right: 					"\e5f0";
-$i-angle-double-left: 		"\f100";
-$i-angle-double-right: 		"\f101";
-$i-angle-left: 				"\f104";
-$i-angle-right: 			"\f105";
-$i-plus-circle: 			"\f055";
-$i-minus-circle: 			"\f056";
-$i-plus: 					"\f067";
-$i-minus: 					"\f068";
-$i-exclamation-circle: 		"\f06a";
-$i-exclamation-triangle: 	"\f071";
-//$i-bubble: 					"\e606";
-$i-up: 						"\e609";
-$i-down: 					"\e612";
-$i-external-link:			"\f08e";
-$i-megaphone: 				"\e613";
-$i-menu: 					"\e615";
-$i-right-small:				"\e616";
-$i-sort: 					"\e617";
-$i-sort-desc: 				"\e619";
-$i-sort-asc: 				"\e620";
-$i-doc: 					"\f016";
-$i-doc-pdf: 				"\f1c1";
-$i-doc-word: 				"\f1c2";
-$i-doc-excel: 				"\f16d";
-$i-doc-powerpoint: 			"\f1c4";
-$i-doc-image: 				"\f1c5";
-$i-doc-zip: 				"\f1c6";
-$i-doc-audio: 				"\f1c7";
-$i-doc-video: 				"\f1c8";
-$i-doc-code: 				"\f1c9";
-$i-whatsapp: 				"\f232";
-$i-copy: 					"\e614";
-$i-clock: 					"\e622";
-$i-print: 					"\e623";
-$i-save: 					"\e610";
-$i-load: 					"\e611";
-$i-happy: 					"\e624";
-$i-help:                    "\e625";
-$i-exit: 					"\e60a";
-$i-new-window: 				"\e60f";
-$i-messenger: 				"\e905";
-$i-facebook: 				"\e60c";
-$i-twitter: 				"\e60d";
-$i-undo:                    "\e626";
-$i-vertical-dots:			"\e901";
-$i-github:					"\e902";
-$i-linkedin:				"\e906";
-$i-spinner:					"\e903";
-$i-cita:					"\e904";
-$i-hearing-loop:			"\e908";
-$i-wheelchair-access:		"\267f";
+$i-key: 					"e900";
+$i-undo: 					"238c";
+$i-target: 					"e605";
+$i-help: 					"3f";
+$i-search: 					"e600";
+$i-email: 					"f003";
+$i-star: 					"e602";
+$i-star-o: 					"f006";
+$i-tick: 					"e601";
+$i-cross: 					"e603";
+$i-bin: 					"e607";
+$i-inbox: 					"e618";
+$i-redo: 					"f01e";
+$i-left: 					"e604";
+$i-right: 					"e5f0";
+$i-angle-double-left: 		"f100";
+$i-angle-double-right: 		"f101";
+$i-angle-left: 				"f104";
+$i-angle-right: 			"f105";
+$i-plus-circle: 			"f055";
+$i-minus-circle: 			"f056";
+$i-plus: 					"f067";
+$i-minus: 					"f068";
+$i-exclamation-circle: 		"f06a";
+$i-exclamation-triangle: 	"f071";
+//$i-bubble: 					"e606";
+$i-up: 						"e609";
+$i-down: 					"e612";
+$i-external-link:			"f08e";
+$i-megaphone: 				"e613";
+$i-menu: 					"e615";
+$i-right-small:				"e616";
+$i-sort: 					"e617";
+$i-sort-desc: 				"e619";
+$i-sort-asc: 				"e620";
+$i-doc: 					"f016";
+$i-doc-pdf: 				"f1c1";
+$i-doc-word: 				"f1c2";
+$i-doc-excel: 				"f16d";
+$i-doc-powerpoint: 			"f1c4";
+$i-doc-image: 				"f1c5";
+$i-doc-zip: 				"f1c6";
+$i-doc-audio: 				"f1c7";
+$i-doc-video: 				"f1c8";
+$i-doc-code: 				"f1c9";
+$i-whatsapp: 				"f232";
+$i-copy: 					"e614";
+$i-clock: 					"e622";
+$i-print: 					"e623";
+$i-save: 					"e610";
+$i-load: 					"e611";
+$i-happy: 					"e624";
+$i-help:                    "e625";
+$i-exit: 					"e60a";
+$i-new-window: 				"e60f";
+$i-messenger: 				"e905";
+$i-facebook: 				"e60c";
+$i-twitter: 				"e60d";
+$i-undo:                    "e626";
+$i-vertical-dots:			"e901";
+$i-github:					"e902";
+$i-linkedin:				"e906";
+$i-spinner:					"e903";
+$i-cita:					"e904";
+$i-hearing-loop:			"e908";
+$i-wheelchair-access:		"267f";
 $i-zws: 					"_";
 //remove this eventually
-	$i-google: 				"\e60b";
+	$i-google: 				"e60b";
