--- a/libs/styles/base/mixins/_btn-icon.scss
+++ b/libs/styles/base/mixins/_btn-icon.scss
@@ -4,7 +4,7 @@
  * Mixin to add icons to buttons by picking the content, position, color and border.
  */
 
-@mixin btn-icon($icon: '\2713', $position: right, $color: $white, $border: false){
+@mixin btn-icon($icon: '2713', $position: right, $color: $white, $border: false){
     position: relative;
     padding-#{$position}: 2.5em;
 
@@ -12,7 +12,7 @@
         #{$position}: 1em;
         font-family: 'cab-icons' !important;
         font-weight: 300;
-        content: $icon;
+        content: unicode($icon);
         color: $color;
         text-align: center;
         @include vertical-align(absolute);
