--- a/libs/styles/components/_forms.scss
+++ b/libs/styles/components/_forms.scss
@@ -686,7 +686,7 @@ input[class*="dob-"] {
 
         /*&:after {
             .icon;
-            content: $i-undo;
+            content: unicode($i-undo);
             padding-left: 1em/2;
         }*/
     }
