--- a/libs/styles/dev/theme/_campaigns.scss
+++ b/libs/styles/dev/theme/_campaigns.scss
@@ -191,7 +191,7 @@
 				&:before {
 					@include icon;
 					color: $twitter-brand-colour;
-					content: $i-twitter;
+					content: unicode($i-twitter);
 					margin-right: .25em;
 				}
 			}
