--- a/libs/styles/base/mixins/_clearfix.scss
+++ b/libs/styles/base/mixins/_clearfix.scss
@@ -6,14 +6,12 @@
 
 // mixin definition
 //
-@mixin clearfix() {
-    .clearfix {
-        &:after {
-            content: " "; // A space apparently works better with some older browsers
-            clear: both;
-            display: block;
-        }
-    }
+@mixin clearfix {
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 }
 
 
