--- a/libs/styles/dev/theme/_main-nav-v3.scss
+++ b/libs/styles/dev/theme/_main-nav-v3.scss
@@ -58,7 +58,7 @@
 
                     /*&:after {
                         font-weight: 300;
-                        content: $i-down;
+                        content: unicode($i-down);
                         padding: 0 0 0 $box-spacing-horizontal/2;
                         .icon;
                         font-size: $font-size-base;
@@ -150,7 +150,7 @@
 
                 &:after {
                     @include icon;
-                    content: $i-menu;
+                    content: unicode($i-menu);
                     padding-left: .5rem;
                 }
             }
