--- a/libs/styles/modules/_blog.scss
+++ b/libs/styles/modules/_blog.scss
@@ -392,7 +392,7 @@ div.comment {
 		&:after {
 			@include icon;
 			color: $white;
-			content: $i-menu;
+			content: unicode($i-menu);
 		}
 		&.active {
 			background-color: $heritage-blue-lightest;
