--- a/libs/styles/modules/_references.scss
+++ b/libs/styles/modules/_references.scss
@@ -35,14 +35,14 @@
 		color: $yellow-dark;
 
 		&:after {
-	    	content: $i-star;
+	    	content: unicode($i-star);
 	        color: $yellow;
 	        @include icon;
 	        bottom: -0.05em;
 	        margin: 0 0 0 .25em;
 	    }
 
-        &:hover:after { content: $i-star-o; }
+        &:hover:after { content: unicode($i-star-o)  }
 	}
 }
 
@@ -51,14 +51,14 @@
 		color: $blue;
 
 		&:after {
-	        content: $i-star-o;
+	        content: unicode($i-star-o) ;
 	        color: $blue-light;
 	        @include icon;
 	        bottom: -0.05em;
 	        margin: 0 0 0 .25em;
 	    }
 
-        &:hover:after { content: $i-star; }
+        &:hover:after { content: unicode($i-star) }
 	}
 }
 
