--- a/libs/styles/print.scss
+++ b/libs/styles/print.scss
@@ -7,6 +7,7 @@
 //
 @import "base/colors";
 @import "base/variables";
+@import "base/functions";
 @import "base/global";
 @import "base/icons";
 @import "base/ie";
