--- a/libs/styles/modules/_cookie-monster.scss
+++ b/libs/styles/modules/_cookie-monster.scss
@@ -13,7 +13,7 @@
     bottom: -1px;
     left: 0;
     right: 0;
-    background: fade($blue-lighter, 95%);
+    background: rgba($blue-lighter, 95%);
     z-index: 10000;
     &__content {
         @include limit-width;
