adding side nav new design

--- a/libs/styles/base/mixins/callout.less
+++ b/libs/styles/base/mixins/callout.less
@@ -13,7 +13,7 @@
 	){
     background-color: @callout-background;
     color: @callout-text;
-    border: 0px @callout-border solid;
+    border: 8px solid @callout-border;
     &:before {
     	background-color: @callout-border;
     }
