--- a/libs/styles/theme/epi-templates.less
+++ b/libs/styles/theme/epi-templates.less
@@ -1,3 +1,5 @@
+
+//This is where it happens
 .index-page__box,
 .home-page__box {
 	.callout(
@@ -23,7 +25,7 @@
     	list-style: none;
     	padding: 0;
     	li {
-    		border: 0 solid @gray-6;
+    		border: 8px solid @gray-6;
     		//border-top-width: 1px;
     		//padding-top: .5rem;
     		padding-bottom: .25rem;
